# corporate-ai-auditor

./: Dockerfile  LICENSE  README.md  app.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
