[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "corporate-ai-auditor"
version = "0.1.0"
description = "Corporate AI Auditor - Meta Hackathon Submission"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "gradio>=4.0.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["env", "inference", "app"]

[tool.setuptools.packages.find]
where = ["."]